--- a/website/cv/index.html
+++ b/website/cv/index.html
@@ -20,7 +20,8 @@ layout: compress
         <a href="/">Back</a>
         <a href="/cv" onclick="window.print();">Print</a>
         <a href="/assets/cv.pdf">Download as PDF</a>
-        <a href="mailto:limpygnome@gmail.com">E-mail</a>
+        <a href="/assets/cv.docx">Download for MS Word</a>
+        <a href="mailto:limpygnome@gmail.com?subject=Marcus%20Craske%20CV&body=https%3A%2F%2Flimpygnome.com%2Fcv">E-mail</a>
     </div>
 
     <div id="wrapper" class="wrapper">
@@ -38,13 +39,10 @@ layout: compress
                 <div class="clear"></div>
             </div>
             <div class="internet">
-                <a href="mailto:limpygnome@gmail.com">limpygnome@gmail.com</a><br />
-                <a href="https://www.limpygnome.com">https://www.limpygnome.com</a>
+                <a href="mailto:limpygnome@gmail.com">limpygnome@gmail.com</a>
             </div>
             <div class="address">
-                26 Market Street<br />
-                Ely<br />
-                CB7 4LS
+                <a href="https://www.limpygnome.com">https://limpygnome.com</a>
             </div>
             <div class="clear"></div>
         </div>
@@ -64,18 +62,22 @@ layout: compress
                         <i>Software Engineer</i><br />
                         Working on HPP (Hosted Payment Pages) platform, the next generation of payment pages for online
                         commerce. Supporting multiple languages, currencies, international alternative payment methods
-                        and card schemes. Used by well-known retailers, corporates, government agencies and smaller businesses.<br />
+                        and card schemes. Processing high volumes of transactions, in the billions annually. Used by
+                        well-known retailers, corporates, government agencies and smaller businesses.<br />
                         <br />
-                        Technical lead working with the business (product manager, project owner, service owners, architecture, enterprise security,
-                        other teams, etc) to implement projects, release lead, defining release process and SDLC, mentoring, department presentations, shifting
-                        platform from propietary licensing to save costs, code reviews, high-level designs, responsible for platform security,
-                        interviewing candidates, improving interview process, running sessions with support teams.<br />
+                        Technical lead working with the business (product manager, project owner, service owners,
+                        enterprise architecture, enterprise security, other teams, etc) to implement projects, release
+                        lead, defining release process and SDLC, mentoring, department presentations, shifting
+                        platform from proprietary licensing to save costs, code reviews, high-level designs,
+                        responsible for platform security, interviewing candidates, improving interview process,
+                        running training sessions with various teams, BRO model / on-call production support.<br />
                         <br />
-                        Using Java 11, Spring Boot, Kubernetes, Docker containers, OpenShift, Ansible, Oracle stack (Weblogic, DB, Coherence),
-                        AWS, Fastly, Angular and much more.<br />
+                        Using Java 11, Spring Boot, Kubernetes, Docker containers, AWS, OpenShift, Ansible, historically
+                        Oracle stack (Weblogic, DB, Coherence), Fastly, Angular and much more.<br />
                         <br />
-                        Experience with working on legacy gateway, mission critical, high-throughput systems. Migrating legacy systems. Based in team using agile,
-                        transformed from Scrum to Kanban, using Jira and physical walls.
+                        Experience with working on legacy gateway, mission critical, high-throughput systems. Migrating
+                        legacy systems. Based in team using Scaled Agile (SaFE), transformed from Scrum to Kanban,
+                        using Jira / Rally, physical whiteboards / walls.
                     </div>
                 </div>
                 <div class="item">
@@ -112,26 +114,40 @@ layout: compress
 
         <div class="section">
             <div class="header">
-                <h2>Computer Skills</h2>
+                <h2>Technical Skills</h2>
             </div>
             <div class="content">
                 <div class="item">
                     <div class="text">
-                        <b>Languages</b> - Java, C#, C/C++ (inc. 11), JavaScript, TypeScript, NodeJS, Matlab, VB.NET, Assembly.
+                        <b>Languages</b> - Java, JavaScript, TypeScript, C#, C/C++ (inc. 11), Matlab.
                     </div>
                 </div>
                 <div class="item">
                     <div class="text">
-                        <b>Platforms</b> - Linux (Arch, Debian, Ubuntu), Mac, Windows (inc. Server 2003/2008), Raspberry Pi, ARM Cortex M, Verifone VX 820 PoS PED.
+                        <b>Platforms</b> - Mac, Linux (Arch, Debian, Ubuntu), Windows, Raspberry Pi, ARM Cortex M, Verifone VX 820 PoS PED.
                     </div>
                 </div>
                 <div class="item">
                     <div class="text">
-                        <b>Misc.</b> - SQL (Oracle, MySQL, Postgres, MSSQL), HTML5, CSS3, Spring Boot, PHP, Android,
-                        OpenGL, ASP.NET, Java EE, Glassfish/Tomcat, Resource Adapters, JMS, Hibernate, Git, Jenkins,
-                        JUnit, Mockito, Docker, Maven, Checkstyle, Ant, dependency injection, Agile / Scrum / Kanban,
-                        SaFE, WSDL, SOAP, REST, LDAP/AD, design patterns, Jira, Mongo, React Native, ReactJS, Redux,
-                        Gulp, Grunt.
+                        <b>Fintech</b> - PCI-DSS, Card Schemes, PSD2 / SCA, ISO 8583, Four Corner Model, Alternative
+                        Payment Methods (APMs), Digital Wallets, EMVCo.
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="text">
+                        <b>Web</b> - WCAG, Web Accessibility, OWASP, HTML5, CSS3, JavaScript, TypeScript, ReactJS, Redux,
+                        Angular, AngularJS, ASP.NET, PHP, Gulp, Grunt.
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="text">
+                        <b>Misc.</b> - Amazon Web Services (AWS), Git, Jenkins,
+                        SQL (Oracle, MySQL, Postgres, MS SQL), Mongo, Spring Boot, JVisualVM,
+                        OpenGL, Java EE, Glassfish, Tomcat, Resource Adapters, JMS, Hibernate,
+                        JUnit, Mockito, Docker, Maven, Checkstyle, Ant, dependency injection,
+                        Agile / Scrum / Kanban / Scaled Agile / SaFE,
+                        WSDL, SOAP, REST, LDAP / Active Directory, design patterns, Jira, Rally,
+                        NodeJS, NPM, Android, iOS, React Native.
                     </div>
                 </div>
             </div>
@@ -160,24 +176,6 @@ layout: compress
                         Programming 2.</i><br />
                         Year 3: 82.66% - <i>Information Retrieval, Embedded Systems, Networks,
                         Software Engineering 2, Project.</i>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="time">
-                        2011
-                    </div>
-                    <div class="text">
-                        <b>Advanced Diploma in IT</b> - A (BBA*)
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="time">
-                        2009
-                    </div>
-                    <div class="text">
-                        <b>GCSEs</b> -  History, Religious Studies and IT (A);
-                        Maths, English, English Literature, Science, Additional Science,
-                        Graphics (B); French (D).
                     </div>
                 </div>
             </div>
@@ -226,16 +224,20 @@ layout: compress
                     <div class="time">
                         2012
                     </div>
-                    <div class="text">
-                        <i>The Pearson Education Prize in Computing Science</i>
-                    </div>
+                    <a href="https://www.uea.ac.uk/computing/news/-/asset_publisher/BZNbbdsKL4kr/blog/school-prizes/10165">
+                        <div class="text">
+                            <i>The Pearson Education Prize in Computing Science</i>
+                        </div>
+                    </a>
                 </div>
                 <div class="item">
                     <div class="time">
                         2011
                     </div>
                     <div class="text">
-                        <i>WorldSkills Web Design - National Final - Gold</i>
+                        <a href="https://www.eveningnews24.co.uk/news/technology/city-college-norwich-students-take-gold-and-silver-in-national-competition-1-975520">
+                            <i>WorldSkills Web Design - National Final - Gold</i>
+                        </a>
                     </div>
                 </div>
                 <div class="item">
@@ -260,34 +262,6 @@ layout: compress
                     </div>
                     <div class="text">
                         <i>Further Education Awards</i>
-                    </div>
-                </div>
-            </div>
-            <div class="clear"></div>
-        </div>
-
-        <div class="section">
-            <div class="header">
-                <h2>Hobbies</h2>
-            </div>
-            <div class="content">
-                <div class="item">
-                    <div class="text">
-                        Road cycling, projects (as seen on website), music.
-                    </div>
-                </div>
-            </div>
-            <div class="clear"></div>
-        </div>
-
-        <div class="section">
-            <div class="header">
-                <h2>References</h2>
-            </div>
-            <div class="content">
-                <div class="item">
-                    <div class="text">
-                        Available on request.
                     </div>
                 </div>
             </div>
